--- a/app/src/main/res/layout/activity_artist_main.xml
+++ b/app/src/main/res/layout/activity_artist_main.xml
@@ -3,15 +3,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#F3F9FF"
     tools:context=".MainActivity">
+
+    <!-- circle image view to show the image -->
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imageViewArtistProfile"
+        app:civ_border_width= "2dp"
+        app:civ_border_color= "@color/material_dynamic_primary0"
+        android:src= "@drawable/img"
+        android:layout_marginTop="25dp"
+        android:layout_centerHorizontal="true"
+        android:layout_width= "120dp"
+        android:layout_height= "120dp"/>
+
+    <TextView
+        android:id="@+id/textViewChangeProfile"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageViewArtistProfile"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:layout_marginTop="5dp"
+        android:text="Change Profile"
+        android:textStyle="bold"
+        android:textSize="16sp"/>
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/editTextName"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="180dp"
         android:layout_marginBottom="10dp"
         android:hint="Enter name"
         android:textColor="#000000"
