artist with auth

--- a/app/src/main/res/layout/activity_artist_main.xml
+++ b/app/src/main/res/layout/activity_artist_main.xml
@@ -1,99 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#F3F9FF"
-    tools:context=".MainActivity">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".Artist.ArtistMain">
 
-    <!-- circle image view to show the image -->
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imageViewArtistProfile"
-        app:civ_border_width= "2dp"
-        app:civ_border_color= "@color/material_dynamic_primary0"
-        android:src= "@drawable/img"
-        android:layout_marginTop="25dp"
-        android:layout_centerHorizontal="true"
-        android:layout_width= "120dp"
-        android:layout_height= "120dp"/>
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/btnLogout"
+            android:layout_width="50dp"
+            android:layout_height="40dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="5dp"
+            android:background="@color/white"
+            android:gravity="center"
+            android:src="@drawable/logout"
+            android:text="Logout" />
 
-    <TextView
-        android:id="@+id/textViewChangeProfile"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageViewArtistProfile"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:text="Change Profile"
-        android:textStyle="bold"
-        android:textSize="16sp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:orientation="vertical">
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/editTextName"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="180dp"
-        android:layout_marginBottom="10dp"
-        android:hint="Enter name"
-        android:textColor="#000000"
-        android:textColorHint="#000000"
-        tools:ignore="MissingConstraints" />
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:src="@drawable/logowithoutname" />
 
-    <androidx.appcompat.widget.AppCompatSpinner
-        android:id="@+id/spinnerGenre"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextName"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:entries="@array/genres"
-        tools:ignore="MissingConstraints"></androidx.appcompat.widget.AppCompatSpinner>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/btnAddArtist"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/concert_one"
+                android:gravity="center_horizontal"
+                android:text="Artis"
+                android:textAlignment="center"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                tools:ignore="MissingConstraints" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnAddArtist"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/spinnerGenre"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:background="#000000"
-        android:text="Add"
-        android:textColor="#FFFFFF"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        tools:ignore="MissingConstraints" />
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textView"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btnAddArtist"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal"
-        android:text="Artists"
-        android:textAlignment="center"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        tools:ignore="MissingConstraints" />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editTextName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginBottom="10dp"
+                    android:hint="Artist Name"
+                    android:inputType="textEmailAddress" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textView1"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:gravity="center_horizontal"
-        android:text="Tap on an Artist to add and view tracks"
-        android:textAlignment="center"
-        tools:ignore="MissingConstraints" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/editTextName"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginBottom="5dp"
+                android:fontFamily="@font/concert_one"
+                android:gravity="center_horizontal"
+                android:text="Genre"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                tools:ignore="MissingConstraints" />
 
-    <ListView
-        android:id="@+id/listViewArtists"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
-        android:layout_alignParentRight="true" />
-</RelativeLayout>
+            <Spinner
+                android:id="@+id/spinnerGenre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textView3"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginBottom="5dp"
+                android:entries="@array/genres"
+                android:fontFamily="@font/concert_one"
+                tools:ignore="MissingConstraints"></Spinner>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnAddArtist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/spinnerGenre"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginBottom="10dp"
+                android:background="#000000"
+                android:fontFamily="@font/concert_one"
+                android:text="ADD"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="#FFFFFF"
+                tools:ignore="MissingConstraints" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/btnAddArtist"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:fontFamily="@font/concert_one"
+                android:gravity="center_horizontal"
+                android:text="Artists"
+                android:textAlignment="center"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                tools:ignore="MissingConstraints" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textView"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:fontFamily="@font/concert_one"
+                android:gravity="center_horizontal"
+                android:text="Tap on an Artist to add and view tracks"
+                android:textAlignment="center"
+                tools:ignore="MissingConstraints" />
+
+            <ListView
+                android:id="@+id/listViewArtists"
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView1"
+                android:layout_gravity="center_horizontal" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
