--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
             android:textSize="30sp"
             android:textStyle="bold"
             android:textColor="@color/black"
+            android:fontFamily="@font/concert_one"
             android:gravity="center_horizontal"
             android:layout_marginVertical="16dp"/>
 
@@ -68,6 +69,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:background="@color/black"
+            android:fontFamily="@font/concert_one"
             android:textStyle="bold"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:layout_marginTop="24dp"
@@ -83,6 +85,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/concert_one"
                 android:text="Not registered yet"
                 android:textSize="16sp"/>
 
@@ -91,6 +94,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
+                android:fontFamily="@font/concert_one"
                 android:text="Register here"
                 android:textColor="@color/black"
                 android:textStyle="bold"
