--- a/app/src/main/res/layout/activity_add_track.xml
+++ b/app/src/main/res/layout/activity_add_track.xml
@@ -6,39 +6,63 @@
     android:background="#F3F9FF"
     tools:context=".AddTrackActivity.AddTrackActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:orientation="vertical">
+        
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:src="@drawable/logowithoutname" />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textViewArtistName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="20dp"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#000000" />
 
 
-    <EditText
-        android:id="@+id/editTrackName"
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="140dp"
-        android:layout_marginRight="20dp"
-        android:hint="Enter track name" />
+        android:layout_marginBottom="10dp"
+        android:layout_below="@+id/textViewArtistName">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginRight="20dp"
-        android:text="Rating"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="#000000" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTrackName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:fontFamily="@font/concert_one"
+            android:hint="Track Name"
+            android:inputType="textEmailAddress" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginBottom="5dp"
+            android:fontFamily="@font/concert_one"
+            android:text="Rating"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="#000000" />
 
     <SeekBar
         android:id="@+id/seekBarRating"
@@ -46,19 +70,21 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:max="5"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="230dp"></SeekBar>
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:fontFamily="@font/concert_one"></SeekBar>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnAddTrack"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="260dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
         android:background="#000000"
-        android:text="Add"
+        android:fontFamily="@font/concert_one"
+        android:text="ADD"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:textColor="#FFFFFF" />
 
@@ -70,16 +96,18 @@
         android:textAlignment="center"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         tools:ignore="MissingConstraints"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="320dp"/>
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:fontFamily="@font/concert_one"
+        android:layout_marginBottom="5dp"/>
 
     <ListView
         android:id="@+id/listViewTracks"
-        android:layout_width="391dp"
-        android:layout_height="478dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="350dp"></ListView>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:fontFamily="@font/concert_one"
+        android:layout_marginRight="25dp"></ListView>
+    </LinearLayout>
 
 </RelativeLayout>
