--- a/app/src/main/res/layout/activity_artist_main.xml
+++ b/app/src/main/res/layout/activity_artist_main.xml
@@ -58,6 +58,7 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginBottom="10dp"
+                android:fontFamily="@font/concert_one"
                 android:hint="Artist Name"
                 android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -136,6 +137,7 @@
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView1"
+            android:fontFamily="@font/concert_one"
             android:layout_gravity="center_horizontal" />
 
     </LinearLayout>
